# RF-PlatformUtils

./: CMakeLists.txt
custom_string/: CMakeLists.txt
custom_string/src/: CMakeLists.txt  custom_string.c  custom_string.h
custom_vector/: CMakeLists.txt
custom_vector/src/: CMakeLists.txt  custom_vector.c
endian_conv/: CMakeLists.txt
endian_conv/src/: CMakeLists.txt  endian_conv.c
platform_methods/: CMakeLists.txt
platform_methods/src/: CMakeLists.txt  iostream_platform.c  iostream_platform.h  memory_platform.c  memory_platform.h  netwok_platform.c  netwok_platform.h  platform_types.h
pthreads-c/: CMakeLists.txt
pthreads-c/src/: CMakeLists.txt  pthread.h
pthreads4w/: .gitignore  CMakeLists.txt
pthreads4w/src/: CMakeLists.txt
pthreads4w/src/cmake/: target_arch.cmake
sandbox/: CMakeLists.txt
sandbox/src/: CMakeLists.txt  utils.c  utils.h
